# Hope

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  SOUL.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
.github/workflows-disabled/: README.md  claude-issues.yml
configs/hope/: config.toml
deploy/docker/: Dockerfile  Dockerfile.evolve  Dockerfile.gpu  Dockerfile.gpu.rocm  Dockerfile.sandbox  docker-compose.gpu.nvidia.yml  docker-compose.gpu.rocm.yml  docker-compose.yml  evolve_entrypoint.sh
deploy/launchd/: com.hope.plist  com.hope.voice-bridge.plist  com.openjarvis.plist
deploy/systemd/: openjarvis.service
docs/: call-mode-setup.md  downloads.md  index.md  leaderboard.md
docs/architecture/: agents.md  channels.md  design-principles.md  engine.md  intelligence.md  learning.md  memory.md  overview.md  query-flow.md  security.md  skills.md
docs/deployment/: api-server.md  docker.md  index.md  launchd.md  systemd.md
docs/development/: contributing.md  roadmap.md
docs/getting-started/: configuration.md  installation.md  macos.md  quickstart.md  snippets.md
docs/testing/: agent-qa-runbook.md
docs/tutorials/: code-companion.md  deep-research.md  index.md  messaging-hub.md  scheduled-ops.md  skills-workflow.md
docs/user-guide/: agents.md  benchmarks.md  channels-and-connectors.md  channels.md  chat-simple.md  cli.md  code-assistant.md  deep-research.md  evaluations.md  mcp-external-servers.md  memory.md  morning-digest.md  python-sdk.md  scheduled-monitor.md  scheduler.md  security.md  skills.md  telemetry.md  tools.md
examples/browser_assistant/: README.md  browser_assistant.py
examples/code_companion/: README.md  debugger.py  reviewer.py  test_gen.py
examples/daily_digest/: README.md  daily_digest.py
examples/deep_research/: README.md  research.py
examples/doc_qa/: README.md  doc_qa.py
examples/messaging_hub/: README.md  smart_inbox.py
examples/multi_model_router/: README.md  multi_model_router.py
examples/scheduled_ops/: README.md  code_review.py  daily_digest.py  gym_scheduler.py
examples/security_scanner/: README.md  security_scanner.py
examples/twitter_bot/: slack_preview.py  test_grounding.py  test_real_world.py  twitter_bot.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
rust/: Cargo.toml
rust/crates/hope-agents/: Cargo.toml
rust/crates/hope-agents/src/: helpers.rs  monitor_operative.rs  native_openhands.rs  simple.rs  traits.rs  utils.rs
rust/crates/hope-learning/: Cargo.toml
rust/crates/hope-learning/src/: grpo.rs  traits.rs
rust/crates/hope-learning/src/optimize/: engine.rs  llm_optimizer.rs  search_space.rs  store.rs  types.rs
rust/crates/hope-mcp/: Cargo.toml
rust/crates/hope-mcp/src/: server.rs
rust/crates/hope-tools/: Cargo.toml
rust/crates/hope-tools/src/: traits.rs
rust/crates/hope-tools/src/builtin/: file_tools.rs  mod.rs  shell.rs  think.rs
rust/crates/hope-tools/src/storage/: bm25.rs  faiss.rs  traits.rs
rust/crates/openjarvis-python/: Cargo.toml
rust/crates/openjarvis-python/src/: a2a.rs  agents.rs  core.rs  learning.rs  mcp.rs  scheduler.rs  sessions.rs  storage.rs  telemetry.rs  templates.rs  traces.rs
scripts/: bench_brain.py  bench_cold_wake.py  bench_debounce.py  bench_full_turn.py  bench_single.py  bench_voice_pipeline.py  build_dashboard.sh  hope-app  hope-call-detect  hope-click  hope-consolidate  hope-dismiss  hope-key  hope-permissions  hope-see  hope-see-recent  hope-see-video  hope-talk  hope-voice-bridge.sh  hope-webcam  hope_consolidate.py  index_docs.py  oauth_all.py  quickstart.sh
src/hope/: __init__.py  _rust_bridge.py  sdk.py
src/iterate/: cli.mjs  hope_iterate.mjs
src/research/: auto-research.mjs  cli.mjs
src/skills/: hope_skill_bench.mjs  hope_skill_cli.mjs  hope_skill_common.mjs  hope_skill_create.mjs  hope_skill_evolve.mjs
src/voice_bridge/: __init__.py  hope_speak_append.py  tts_consumer.py  turn_loop.py
tests/: conftest.py  test_digest_integration.py  test_query_orchestrator.py
tests/a2a/: test_a2a.py
tests/agents/: conftest.py  fake_engine.py  scenario_harness.py  test_agent_lifecycle_scenarios.py  test_agent_routing_matrix.py  test_base_agent.py  test_budget.py  test_channel_agent.py  test_channel_agent_integration.py  test_claude_code.py  test_config_defaults.py  test_continuation.py  test_deep_research.py  test_deep_research_integration.py  test_deep_research_prompt.py  test_digest_store.py  test_errors.py  test_executor.py  test_executor_ephemeral.py  test_executor_error_detail.py  test_executor_tools.py  test_learning_integration.py  test_loop_guard.py  test_loop_guard_warn.py  test_manager.py  test_manager_recover.py  test_monitor_operative.py  test_morning_digest.py  test_native_openhands.py  test_native_react.py  test_openhands.py  test_orchestrator.py  test_rlm.py  test_rlm_repl.py  test_scheduler.py  test_simple.py  test_stall.py  test_suggest_action.py  test_system_prompt_builder_integration.py  test_template_prompts.py  (+2 more)
tests/bench/: test_bench_stats.py  test_energy.py  test_latency.py  test_stubs.py  test_throughput.py
tests/capture/: __init__.py  test_screen.py
tests/channels/: channel_test_helpers.py  conftest.py  test_agent_channel_e2e.py  test_bluebubbles.py  test_channel_config.py  test_channel_contract.py  test_channel_registry.py  test_channels_phase21.py  test_config.py  test_discord_channel.py  test_email_channel.py  test_feishu.py  test_google_chat.py  test_imessage_daemon.py  test_irc_channel.py  test_matrix_channel.py  test_mattermost.py  test_sendblue.py  test_signal_channel.py  test_slack.py  test_slack_messaging.py  test_stubs.py  test_teams.py  test_telegram.py  test_tier1_gmail.py  test_twilio_sms.py  test_twitter_bot_e2e.py  test_twitter_channel.py  test_webchat.py  test_webhook.py  (+2 more)
(+1270 files in other folders)
