[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Hope"
version = "0.1.1"
description = "Hope — local-first voice-interactive personal AI assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Open Hope Contributors"},
]
keywords = ["voice-assistant", "local-first", "macos", "personal-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8",
    "httpx>=0.27",
    "rich>=13",
    "tomli>=2.0; python_version < '3.11'",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.12.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.22",
    "ruff>=0.4",
    "pre-commit>=3.0",
]
speech = [
    "silero-vad>=5.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
]
capture = [
    "mss>=9.0",
    "pillow>=10",
]
vision = [
    # Apple Silicon only — Gemma multimodal via MLX
    "mlx>=0.19; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-vlm>=0.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "pillow>=10",
    "huggingface_hub>=0.24",
]
memory = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "numpy>=1.24",
]
skills = ["watchdog>=4.0"]

[project.urls]
Homepage = "https://github.com/open-hope/Hope"
Repository = "https://github.com/open-hope/Hope"
Issues = "https://github.com/open-hope/Hope/issues"

[project.scripts]
hope = "hope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires running inference engine",
    "apple: requires Apple Silicon",
    "slow: long-running test",
]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E402 (import not at top): daemon/core.py keeps a small regex helper
# between import groups for documentation locality.
# F401 (unused import): skills/watcher.py uses an optional-dep probe.
# F841 (assigned never used): kept for diagnostics in a couple of spots.
# Errors that matter for correctness (real unused imports we forgot to
# clean up, syntax issues, etc.) are still selected via the I and W
# groups above.
ignore = ["E402", "F401", "F841", "I001"]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
]
