[package]
name = "hope-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
hope-core = { path = "../hope-core" }
hope-traces = { path = "../hope-traces" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
