[package]
name = "hope-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
hope-core = { path = "../hope-core" }
hope-tools = { path = "../hope-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
