[package]
name = "hope-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "hope_rust"
crate-type = ["cdylib"]

[dependencies]
hope-core = { path = "../hope-core" }
hope-engine = { path = "../hope-engine" }
hope-security = { path = "../hope-security" }
hope-tools = { path = "../hope-tools" }
hope-agents = { path = "../hope-agents" }
hope-traces = { path = "../hope-traces" }
hope-telemetry = { path = "../hope-telemetry" }
hope-learning = { path = "../hope-learning" }
hope-mcp = { path = "../hope-mcp" }
hope-sessions = { path = "../hope-sessions" }
hope-workflow = { path = "../hope-workflow" }
hope-skills = { path = "../hope-skills" }
hope-recipes = { path = "../hope-recipes" }
hope-templates = { path = "../hope-templates" }
hope-a2a = { path = "../hope-a2a" }
hope-scheduler = { path = "../hope-scheduler" }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
